front 85%, botoes de coletas e aba endereços ok

--- a/customer/chooseAddress.html
+++ b/customer/chooseAddress.html
@@ -40,7 +40,7 @@
 
       <a href="../customer.html"> Nova Coleta</a>
 
-      <a href="../login.html">&#8592; sair</a>
+      <a href="../home.html">&#8592; sair</a>
     </div>
 
     <section class="top">
@@ -52,73 +52,37 @@
         &#8592;
       </button>
 
-      <div class="address">
-        <h3>Endereço 1</h3>
-        <ul>
-          <li><strong>Rua: </strong>Professor Doutor Euryclides</li>
-          <li><strong>Número: </strong>820</li>
-          <li><strong>Complemento: </strong>Apto 202</li>
-          <li><strong>Bairro: </strong>Parque das Universidades</li>
-          <li><strong>CEP: </strong>13087-571</li>
-          <li><strong>Cidade: </strong>Campinas <strong>Estado: </strong>SP</li>
-        </ul>
-      </div>
+      <div class="box">
 
-      <div class="address">
-        <h3>Endereço 2</h3>
-        <ul>
-          <li><strong>Rua: </strong>Professor Doutor Euryclides</li>
-          <li><strong>Número: </strong>820</li>
-          <li><strong>Complemento: </strong>Apto 202</li>
-          <li><strong>Bairro: </strong>Parque das Universidades</li>
-          <li><strong>CEP: </strong>13087-571</li>
-          <li><strong>Cidade: </strong>Campinas <strong>Estado: </strong>SP</li>
-        </ul>
-      </div>
+        <div class="address">
+          <h3>Casa</h3>
+          <ul>
+            <li><strong>Rua: </strong>Professor Doutor Euryclides</li>
+            <li><strong>Número: </strong>820</li>
+            <li><strong>Complemento: </strong>Apto 202</li>
+            <li><strong>Bairro: </strong>Parque das Universidades</li>
+            <li><strong>CEP: </strong>13087-571</li>
+            <li><strong>Cidade: </strong>Campinas <strong class="st">Estado: </strong>SP</li>
+          </ul>
+        </div>
 
-      <div class="address">
-        <h3>Endereço 3</h3>
-        <ul>
-          <li><strong>Rua: </strong>Professor Doutor Euryclides</li>
-          <li><strong>Número: </strong>820</li>
-          <li><strong>Complemento: </strong>Apto 202</li>
-          <li><strong>Bairro: </strong>Parque das Universidades</li>
-          <li><strong>CEP: </strong>13087-571</li>
-          <li><strong>Cidade: </strong>Campinas <strong>Estado: </strong>SP</li>
-        </ul>
-      </div>
+        <div class="address">
+          <h3>Casa</h3>
+          <ul>
+            <li><strong>Rua: </strong>Professor Doutor Euryclides</li>
+            <li><strong>Número: </strong>820</li>
+            <li><strong>Complemento: </strong>Apto 202</li>
+            <li><strong>Bairro: </strong>Parque das Universidades</li>
+            <li><strong>CEP: </strong>13087-571</li>
+            <li><strong>Cidade: </strong>Campinas <strong class="st">Estado: </strong>SP</li>
+          </ul>
+        </div>
 
-      <div class="address">
-        <h3>Endereço 3</h3>
-        <ul>
-          <li><strong>Rua: </strong>Professor Doutor Euryclides</li>
-          <li><strong>Número: </strong>820</li>
-          <li><strong>Complemento: </strong>Apto 202</li>
-          <li><strong>Bairro: </strong>Parque das Universidades</li>
-          <li><strong>CEP: </strong>13087-571</li>
-          <li><strong>Cidade: </strong>Campinas <strong>Estado: </strong>SP</li>
-        </ul>
-      </div>
-
-      <div class="address">
-        <h3>Endereço 3</h3>
-        <ul>
-          <li><strong>Rua: </strong>Professor Doutor Euryclides</li>
-          <li><strong>Número: </strong>820</li>
-          <li><strong>Complemento: </strong>Apto 202</li>
-          <li><strong>Bairro: </strong>Parque das Universidades</li>
-          <li><strong>CEP: </strong>13087-571</li>
-          <li><strong>Cidade: </strong>Campinas <strong>Estado: </strong>SP</li>
-        </ul>
       </div>
 
       <div class="bottom">
         <button onclick="newCollect()">finalizar</button>
       </div>
-
-      <button class="chat" onclick="chat()">
-        <img src="../assets/images/chat.png" alt="" />
-      </button>
     </main>
 
     <script type="text/javascript" src="../js/customer/chooseAddress.js"></script>
