--- a/customer/data.html
+++ b/customer/data.html
@@ -40,7 +40,7 @@
 
       <a href="../customer.html"> Nova Coleta</a>
 
-      <a href="../login.html">&#8592; sair</a>
+      <a href="../home.html">&#8592; sair</a>
     </div>
 
     <section class="top">
@@ -77,9 +77,6 @@
         </span>
       </div>
 
-      <button class="chat" onclick="chat()">
-        <img src="../assets/images/chat.png" alt="" />
-      </button>
     </main>
 
     <script type="text/javascript" src="../js/customer/data.js"></script>
