--- a/scavengers/data.html
+++ b/scavengers/data.html
@@ -38,7 +38,7 @@
       </nav>
 
       <a href="../scavenger.html">Coletas</a>
-      <a href="../login.html" class="logout">&#8592; sair</a>
+      <a href="../home.html" class="logout">&#8592; sair</a>
     </div>
 
     <section class="top">
@@ -90,10 +90,7 @@
           Tarde
         </span>
       </div>
-
-      <button class="chat" onclick="chat()">
-        <img src="../assets/images/chat.png" alt="" />
-      </button>
+      
     </main>
 
     <script type="text/javascript" src="js/index.js"></script>
