--- a/customer/address.html
+++ b/customer/address.html
@@ -40,7 +40,7 @@
 
       <a href="../customer.html"> Nova Coleta</a>
 
-      <a href="../login.html">&#8592; sair</a>
+      <a href="../home.html">&#8592; sair</a>
     </div>
 
     <section class="top">
@@ -52,81 +52,34 @@
         <a href="newAddress.html">&#43; Adicionar Endereço</a>
       </div>
 
-      <div class="address">
-        <h3>Endereço 1</h3>
-        <ul>
-          <li><strong>Rua: </strong>Professor Doutor Euryclides</li>
-          <li><strong>Número: </strong>820</li>
-          <li><strong>Complemento: </strong>Apto 202</li>
-          <li><strong>Bairro: </strong>Parque das Universidades</li>
-          <li><strong>CEP: </strong>13087-571</li>
-          <li><strong>Cidade: </strong>Campinas <strong>Estado: </strong>SP</li>
-        </ul>
-      </div>
+      <div class="box">
 
-      <div class="address">
-        <h3>Endereço 2</h3>
-        <ul>
-          <li><strong>Rua: </strong>Professor Doutor Euryclides</li>
-          <li><strong>Número: </strong>820</li>
-          <li><strong>Complemento: </strong>Apto 202</li>
-          <li><strong>Bairro: </strong>Parque das Universidades</li>
-          <li><strong>CEP: </strong>13087-571</li>
-          <li><strong>Cidade: </strong>Campinas <strong>Estado: </strong>SP</li>
-        </ul>
-      </div>
+        <div class="address">
+          <h3>Casa</h3>
+          <ul>
+            <li><strong>Rua: </strong>Professor Doutor Euryclides</li>
+            <li><strong>Número: </strong>820</li>
+            <li><strong>Complemento: </strong>Apto 202</li>
+            <li><strong>Bairro: </strong>Parque das Universidades</li>
+            <li><strong>CEP: </strong>13087-571</li>
+            <li><strong>Cidade: </strong>Campinas <strong class="st">Estado: </strong>SP</li>
+          </ul>
+        </div>
 
-      <div class="address">
-        <h3>Endereço 3</h3>
-        <ul>
-          <li><strong>Rua: </strong>Professor Doutor Euryclides</li>
-          <li><strong>Número: </strong>820</li>
-          <li><strong>Complemento: </strong>Apto 202</li>
-          <li><strong>Bairro: </strong>Parque das Universidades</li>
-          <li><strong>CEP: </strong>13087-571</li>
-          <li><strong>Cidade: </strong>Campinas <strong>Estado: </strong>SP</li>
-        </ul>
-      </div>
+        <div class="address">
+          <h3>Casa</h3>
+          <ul>
+            <li><strong>Rua: </strong>Professor Doutor Euryclides</li>
+            <li><strong>Número: </strong>820</li>
+            <li><strong>Complemento: </strong>Apto 202</li>
+            <li><strong>Bairro: </strong>Parque das Universidades</li>
+            <li><strong>CEP: </strong>13087-571</li>
+            <li><strong>Cidade: </strong>Campinas <strong class="st">Estado: </strong>SP</li>
+          </ul>
+        </div>
 
-      <div class="address">
-        <h3>Endereço 4</h3>
-        <ul>
-          <li><strong>Rua: </strong>Professor Doutor Euryclides</li>
-          <li><strong>Número: </strong>820</li>
-          <li><strong>Complemento: </strong>Apto 202</li>
-          <li><strong>Bairro: </strong>Parque das Universidades</li>
-          <li><strong>CEP: </strong>13087-571</li>
-          <li><strong>Cidade: </strong>Campinas <strong>Estado: </strong>SP</li>
-        </ul>
       </div>
-
-      <div class="address">
-        <h3>Endereço 5</h3>
-        <ul>
-          <li><strong>Rua: </strong>Professor Doutor Euryclides</li>
-          <li><strong>Número: </strong>820</li>
-          <li><strong>Complemento: </strong>Apto 202</li>
-          <li><strong>Bairro: </strong>Parque das Universidades</li>
-          <li><strong>CEP: </strong>13087-571</li>
-          <li><strong>Cidade: </strong>Campinas <strong>Estado: </strong>SP</li>
-        </ul>
-      </div>
-
-      <div class="address">
-        <h3>Endereço 6</h3>
-        <ul>
-          <li><strong>Rua: </strong>Professor Doutor Euryclides</li>
-          <li><strong>Número: </strong>820</li>
-          <li><strong>Complemento: </strong>Apto 202</li>
-          <li><strong>Bairro: </strong>Parque das Universidades</li>
-          <li><strong>CEP: </strong>13087-571</li>
-          <li><strong>Cidade: </strong>Campinas <strong>Estado: </strong>SP</li>
-        </ul>
-      </div>
-
-      <button class="chat" onclick="chat()">
-        <img src="../assets/images/chat.png" alt="" />
-      </button>
+      
     </main>
   </body>
 </html>
