--- a/customer/scheduled.html
+++ b/customer/scheduled.html
@@ -41,7 +41,7 @@
 
       <a href="../customer.html"> Nova Coleta</a>
 
-      <a href="../login.html">&#8592; sair</a>
+      <a href="../home.html">&#8592; sair</a>
     </div>
 
     <section class="top">
@@ -50,7 +50,9 @@
 
     <main>
       <div class="collect">
-        <img src="../assets/images/arvore.png" alt="" />
+        <div class="image">
+          <img src="../assets/icons/scheduled.png" alt="" />
+        </div>
 
         <div class="content">
           <h1>Coleta #1</h1>
@@ -62,77 +64,23 @@
             <li>Período: <span>tarde</span></li>
             <li>Observação: <span>vidro quebrado</span></li>
             <li>Peso: <span>5</span><span>kg</span></li>
+            <li>Endereço: <span>Casa</span></li>
           </ul>
         </div>
-      </div>
-      <div class="collect">
-        <img src="../assets/images/arvore.png" alt="" />
 
-        <div class="content">
-          <h1>Coleta #2</h1>
-          <ul>
-            <li>Materiais: <span>plástico, vidro</span></li>
-            <li>
-              Dias: <span>segunda-feira, quarta-feira, quinta-feira</span>
-            </li>
-            <li>Período: <span>tarde</span></li>
-            <li>Observação: <span>vidro quebrado</span></li>
-            <li>Peso: <span>5</span><span>kg</span></li>
-          </ul>
-        </div>
-      </div>
-      <div class="collect">
-        <img src="../assets/images/arvore.png" alt="" />
+        <div class="buttons">
+          <button class="cancel">
+            <span>cancelar</span>
+            <img src="../assets/icons/cancel.png" alt="" />
+          </button>
 
-        <div class="content">
-          <h1>Coleta #3</h1>
-          <ul>
-            <li>Materiais: <span>plástico, vidro</span></li>
-            <li>
-              Dias: <span>segunda-feira, quarta-feira, quinta-feira</span>
-            </li>
-            <li>Período: <span>tarde</span></li>
-            <li>Observação: <span>vidro quebrado</span></li>
-            <li>Peso: <span>5</span><span>kg</span></li>
-          </ul>
-        </div>
-      </div>
-      <div class="collect">
-        <img src="../assets/images/arvore.png" alt="" />
-
-        <div class="content">
-          <h1>Coleta #4</h1>
-          <ul>
-            <li>Materiais: <span>plástico, vidro</span></li>
-            <li>
-              Dias: <span>segunda-feira, quarta-feira, quinta-feira</span>
-            </li>
-            <li>Período: <span>tarde</span></li>
-            <li>Observação: <span>vidro quebrado</span></li>
-            <li>Peso: <span>5</span><span>kg</span></li>
-          </ul>
-        </div>
-      </div>
-      <div class="collect">
-        <img src="../assets/images/arvore.png" alt="" />
-
-        <div class="content">
-          <h1>Coleta #5</h1>
-          <ul>
-            <li>Materiais: <span>plástico, vidro</span></li>
-            <li>
-              Dias: <span>segunda-feira, quarta-feira, quinta-feira</span>
-            </li>
-            <li>Período: <span>tarde</span></li>
-            <li>Observação: <span>vidro quebrado</span></li>
-            <li>Peso: <span>5</span><span>kg</span></li>
-          </ul>
+          <button class="done">
+            <span>finalizar</span>
+            <img src="../assets/icons/done.png" alt="" />
+          </button>
         </div>
       </div>
 
-      <button class="chat" onclick="chat()">
-        <img src="../assets/images/chat.png" alt="" />
-      </button>
     </main>
 
     <script type="text/javascript" src="js/index.js"></script>
