--- a/customer/login.html
+++ b/customer/login.html
@@ -26,7 +26,7 @@
         <div class="popup-content">
           <h1>Nova Conta - CLIENTE</h1>
 
-          <form>
+          <div class="form">
             <div class="background">
               <div class="table">
                 <label for="name">Nome</label>
@@ -76,7 +76,7 @@
             </div>
 
             <button onclick="signup_customer()">cadastrar</button>
-          </form>
+          </div>
         </div>
       </div>
     </div>
