--- a/scavengers/login.html
+++ b/scavengers/login.html
@@ -79,7 +79,7 @@
       <div class="popup-content">
         <h1>Nova Conta - COLETOR</h1>
 
-        <form action="">
+        <div class="form">
           <div class="background">
             <select name="" id="">
               <option value="">Selecione o tipo de catador</option>
@@ -158,7 +158,7 @@
           </div>
 
           <button onclick="signup_scavenger()">cadastrar</button>
-        </form>
+        </div>
       </div>
     </div>
   </div>
