--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 
 <body>
   <nav>
-    <img src="assets/images/arvore.png" alt="" />
+    <img src="assets/images/tree.png" alt="" />
     <h1>green match</h1>
 
     <ul>
@@ -46,9 +46,9 @@
           <img src="assets/images/customer.png" width="" alt="" />
 
           <ul>
-            <li>Possui material reciclavel acumulado</li>
-            <li>benficio</li>
-            <li>benficio</li>
+            <li>Possui material reciclável acumulado</li>
+            <li>Material retirado no seu endereço</li>
+            <li>Retirada no momento que lhe convém</li>
           </ul>
 
           <button onclick="openSignUpCustomer()">reciclar</button>
@@ -63,8 +63,8 @@
 
           <ul>
             <li>Possibilidade de renda extra</li>
-            <li>benficio</li>
-            <li>benficio</li>
+            <li>Maior oferta de trabalho</li>
+            <li>Retirada do material direto com o proprietário</li>
           </ul>
 
           <button onclick="openSignUpScavenger()">coletar</button>
@@ -80,7 +80,7 @@
       <div class="popup-content">
         <h1>Nova Conta - CLIENTE</h1>
 
-        <form>
+        <div class="form">
           <div class="background">
 
             <div class="table">
@@ -113,13 +113,18 @@
               <input type="date" name="" id="" class="birthDay">
 
               <label for="">Gênero</label>
-              <div class="gender">
+              <ul class="gender">
+                <li>
+                  <input type="radio" name="gender" id="male" value="Masculino"><label for="male">Masculino</label>
+                </li>
+                <li>
+                  <input type="radio" name="gender" id="female" value="Femenino"><label for="female">Femenino</label>
+                </li>
+                <li>
+                  <input type="radio" name="gender" id="other" value="Outro"><label for="other">Outro</label>
+                </li>
 
-                <input type="radio" name="gen" id="male"><label for="male">Masculino</label>
-                <input type="radio" name="gen" id="female"><label for="female">Femenino</label>
-                <input type="radio" name="gen" id="other"><label for="other">Outro</label>
-
-              </div>
+              </ul>
 
             </div>
 
@@ -127,7 +132,7 @@
 
           <button onclick="signup_customer()">cadastrar</button>
 
-        </form>
+        </div>
       </div>
     </div>
 
@@ -173,13 +178,13 @@
             <label for="">Gênero</label>
             <ul class="gender">
               <li>
-                <input type="radio" name="gen" id="maleS"><label for="maleS">Masculino</label>
+                <input type="radio" name="genderS" id="maleS" value="Masculino"><label for="maleS">Masculino</label>
               </li>
               <li>
-                <input type="radio" name="gen" id="femaleS"><label for="femaleS">Femenino</label>
+                <input type="radio" name="genderS" id="femaleS" value="Femenino"><label for="femaleS">Femenino</label>
               </li>
               <li>
-                <input type="radio" name="gen" id="otherS"><label for="otherS">Outro</label>
+                <input type="radio" name="genderS" id="otherS" value="Outro"><label for="otherS">Outro</label>
               </li>
 
             </ul>
@@ -201,7 +206,7 @@
       <div class="popup-content">
         <h1>Nova Conta - COLETOR</h1>
 
-        <form action="">
+        <div class="form">
 
           <div class="background">
 
@@ -213,14 +218,14 @@
 
             <h2>Quais materiais deseja coletar?</h2>
             <ul class="materiais">
-              <li><input type="checkbox" id="papel"><label for="papel">Papel</label></li>
-              <li><input type="checkbox" id="plastico"><label for="plastico">Plastico</label></li>
-              <li><input type="checkbox" id="metal"><label for="metal">Metal</label></li>
-              <li><input type="checkbox" id="vidro"><label for="vidro">Vidro</label></li>
-              <li><input type="checkbox" id="entulho"><label for="entulho">Entulho</label></li>
-              <li><input type="checkbox" id="eletronico"><label for="eletronico">Eletrônico</label></li>
-              <li><input type="checkbox" id="moveis"><label for="moveis">Móveis</label></li>
-              <li><input type="checkbox" id="outros"><label for="outros">Outros</label></li>
+              <li><input type="checkbox" name="material" id="papel" value="Papel"><label for="papel">Papel</label></li>
+              <li><input type="checkbox" name="material" id="plastico" value="Plastico"><label for="plastico">Plastico</label></li>
+              <li><input type="checkbox" name="material" id="metal" value="Metal"><label for="metal">Metal</label></li>
+              <li><input type="checkbox" name="material" id="vidro" value="Vidro"><label for="vidro">Vidro</label></li>
+              <li><input type="checkbox" name="material" id="entulho" value="Entulho"><label for="entulho">Entulho</label></li>
+              <li><input type="checkbox" name="material" id="eletronico" value="Eletrônico"><label for="eletronico">Eletrônico</label></li>
+              <li><input type="checkbox" name="material" id="moveis" value="Móveis"><label for="moveis">Móveis</label></li>
+              <li><input type="checkbox" name="material" id="outros" value="Outros"><label for="outros">Outros</label></li>
             </ul>
 
 
@@ -239,9 +244,9 @@
 
             <h2>Qual período mais adequado?</h2>
             <ul class="periodo">
-              <li><input type="radio" id="manha" name="periodo"><label for="manha">Manhã</label></li>
-              <li><input type="radio" id="tarde" name="periodo"><label for="tarde">Tarde</label></li>
-              <li><input type="radio" id="noite" name="periodo"><label for="noite">Noite</label></li>
+              <li><input type="checkbox" id="manha" name="periodo"><label for="manha">Manhã</label></li>
+              <li><input type="checkbox" id="tarde" name="periodo"><label for="tarde">Tarde</label></li>
+              <li><input type="checkbox" id="noite" name="periodo"><label for="noite">Noite</label></li>
             </ul>
 
           </div>
@@ -249,7 +254,7 @@
 
           <button onclick="signup_scavenger()">cadastrar</button>
 
-        </form>
+        </div>
 
 
       </div>
@@ -317,6 +322,12 @@
       <h1>Contato</h1>
 
       <div class="form">
+        <select name="" id="">
+          <option value="">Assuntos</option>
+          <option value="">Parceria Empresarial - Indústria</option>
+          <option value="">Parceria Residencial - Condomínio</option>
+        </select>
+
         <div class="single-input">
           <input type="text" name="" id="nome" required />
           <label for="nome">Nome</label>
