--- a/customer/address.html
+++ b/customer/address.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../css/sidebar.css" />
     <link rel="stylesheet" href="../css/customer/address.css" />
 
-    <title>Nova Coleta</title>
+    <title>Endereços</title>
   </head>
 
   <body>
@@ -38,7 +38,7 @@
         </ul>
       </nav>
 
-      <a href="../customer.html"> Nova Coleta</a>
+      <a href="../customer.html">Solicitar Coleta</a>
 
       <a href="../home.html">&#8592; sair</a>
     </div>
