--- a/customer/historic.html
+++ b/customer/historic.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../css/customer/historic.css" />
     <link rel="stylesheet" href="../css/collect.css" />
 
-    <title>Perfil Cliente</title>
+    <title>Histórico de Coletas</title>
   </head>
 
   <body>
@@ -39,7 +39,7 @@
         </ul>
       </nav>
 
-      <a href="../customer.html"> Nova Coleta</a>
+      <a href="../customer.html">Solicitar Coleta</a>
 
       <a href="../home.html">&#8592; sair</a>
     </div>
@@ -65,6 +65,7 @@
             <li>Observação: <span>vidro quebrado</span></li>
             <li>Peso: <span>5</span><span>kg</span></li>
             <li>Endereço: <span>Casa</span></li>
+            <li>Coletor: <span>Josué</span></li>
           </ul>
         </div>
 
