--- a/customer/newCollect.html
+++ b/customer/newCollect.html
@@ -40,7 +40,7 @@
       </ul>
     </nav>
 
-    <a href="../customer.html" id="#nova_coleta"> Nova Coleta</a>
+    <a href="../customer.html" id="#nova_coleta">Solicitar Coleta</a>
 
     <a href="../home.html">&#8592; sair</a>
   </div>
