--- a/customer/requested.html
+++ b/customer/requested.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../css/collect.css" />
     <link rel="stylesheet" href="../css/customer/requested.css" />
 
-    <title>Perfil Cliente</title>
+    <title>Coletas Solicitadas</title>
   </head>
 
   <body>
@@ -39,7 +39,7 @@
         </ul>
       </nav>
 
-      <a href="../customer.html"> Nova Coleta</a>
+      <a href="../customer.html">Solicitar Coleta</a>
 
       <a href="../home.html">&#8592; sair</a>
     </div>
