--- a/scavenger.html
+++ b/scavenger.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/sidebar.css" />
     <link rel="stylesheet" href="css/collect.css" />
 
-    <title>Perfil Catador</title>
+    <title>Coletas Disponíveis</title>
   </head>
 
   <body>
@@ -24,7 +24,7 @@
       <img src="assets/images/user.png" alt="" />
 
       <h3>Bem-vindo</h3>
-      <h2>Catador</h2>
+      <h2>Coletor</h2>
 
       <nav>
         <ul>
