--- a/scavengers/data.html
+++ b/scavengers/data.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../css/scavenger/data.css" />
     <link rel="stylesheet" href="../css/collect.css" />
 
-    <title>Perfil Catador</title>
+    <title>Meus Dados</title>
   </head>
 
   <body>
