--- a/scavengers/historic.html
+++ b/scavengers/historic.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../css/scavenger/historic.css" />
     <link rel="stylesheet" href="../css/collect.css" />
 
-    <title>Perfil Catador</title>
+    <title>Histórico de Coletas</title>
   </head>
 
   <body>
