--- a/scavengers/scheduled.html
+++ b/scavengers/scheduled.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../css/scavenger/scheduled.css" />
     <link rel="stylesheet" href="../css/collect.css" />
 
-    <title>Perfil Catador</title>
+    <title>Coletas Agendadas</title>
   </head>
 
   <body>
@@ -25,7 +25,7 @@
       <img src="../assets/images/user.png" alt="" />
 
       <h3>Bem-vindo</h3>
-      <h2>Catador</h2>
+      <h2>Coletor</h2>
 
       <nav>
         <ul>
