--- a/customer.html
+++ b/customer.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/sidebar.css" />
     <link rel="stylesheet" href="css/costumer.css" />
 
-    <title>Perfil Cliente</title>
+    <title>Nova Coleta</title>
   </head>
 
   <body>
