--- a/customer/newAddress.html
+++ b/customer/newAddress.html
@@ -38,7 +38,7 @@
         </ul>
       </nav>
 
-      <a href="../customer.html"> Nova Coleta</a>
+      <a href="../customer.html">Solicitar Coleta</a>
 
       <a href="../home.html">&#8592; sair</a>
     </div>
