--- a/customer/newCollect.html
+++ b/customer/newCollect.html
@@ -50,79 +50,79 @@
       <h2>Quais materiais deseja que sejam coletados?</h2>
       <ul class="materiais">
         <li>
-          <input type="checkbox" id="papel" /><label for="papel">Papel</label>
+          <input type="checkbox" name="material" id="papel" value="Papel"/><label for="papel">Papel</label>
         </li>
         <li>
-          <input type="checkbox" id="plastico" /><label for="plastico">Plastico</label>
+          <input type="checkbox" name="material" id="plastico" value="Plastico"/><label for="plastico">Plastico</label>
         </li>
         <li>
-          <input type="checkbox" id="metal" /><label for="metal">Metal</label>
+          <input type="checkbox" name="material" id="metal" value="Metal"/><label for="metal">Metal</label>
         </li>
         <li>
-          <input type="checkbox" id="vidro" /><label for="vidro">Vidro</label>
+          <input type="checkbox" name="material" id="vidro" value="Vidro"/><label for="vidro">Vidro</label>
         </li>
         <li>
-          <input type="checkbox" id="entulho" /><label for="entulho">Entulho</label>
+          <input type="checkbox" name="material" id="entulho" value="Entulho"/><label for="entulho">Entulho</label>
         </li>
         <li>
-          <input type="checkbox" id="eletronico" /><label for="eletronico">Eletrônico</label>
+          <input type="checkbox" name="material" id="eletronico" value="Eletrônico"/><label for="eletronico">Eletrônico</label>
         </li>
         <li>
-          <input type="checkbox" id="moveis" /><label for="moveis">Móveis</label>
+          <input type="checkbox" name="material" id="moveis" value="Móveis"/><label for="moveis">Móveis</label>
         </li>
         <li>
-          <input type="checkbox" id="outros" /><label for="outros">Outros</label>
+          <input type="checkbox" name="material" id="outros" value="Outros"/><label for="outros">Outros</label>
         </li>
       </ul>
 
       <h2>Qual dia seria melhor para realizar a coleta?</h2>
       <ul class="dias">
         <li>
-          <input type="checkbox" id="segunda" /><label for="segunda">Segunda-Feira</label>
+          <input type="checkbox" name="dia" id="segunda" value="Segunda-Feira"/><label for="segunda">Segunda-Feira</label>
         </li>
         <li>
-          <input type="checkbox" id="terca" /><label for="terca">Terça-Feira</label>
+          <input type="checkbox" name="dia" id="terca" value="Terça-Feira"/><label for="terca">Terça-Feira</label>
         </li>
         <li>
-          <input type="checkbox" id="quarta" /><label for="quarta">Quarta-Feira</label>
+          <input type="checkbox" name="dia" id="quarta" value="Quarta-Feira"/><label for="quarta">Quarta-Feira</label>
         </li>
         <li>
-          <input type="checkbox" id="quinta" /><label for="quinta">Quinta-Feira</label>
+          <input type="checkbox" name="dia" id="quinta" value="Quinta-Feira"/><label for="quinta">Quinta-Feira</label>
         </li>
         <li>
-          <input type="checkbox" id="sexta" /><label for="sexta">Sexta-Feira</label>
+          <input type="checkbox" name="dia" id="sexta" value="Sexta-Feira"/><label for="sexta">Sexta-Feira</label>
         </li>
         <li>
-          <input type="checkbox" id="sabado" /><label for="sabado">Sábado</label>
+          <input type="checkbox" name="dia" id="sabado" value="Sábado"/><label for="sabado">Sábado</label>
         </li>
         <li>
-          <input type="checkbox" id="domingo" /><label for="domingo">Domingo</label>
+          <input type="checkbox" name="dia" id="domingo" value="Domingo"/><label for="domingo">Domingo</label>
         </li>
         <li>
-          <input type="checkbox" id="feriado" /><label for="feriado">Feriados</label>
+          <input type="checkbox" name="dia" id="feriado" value="Feriados"/><label for="feriado">Feriados</label>
         </li>
       </ul>
 
       <h2>Qual período mais adequado?</h2>
       <ul class="periodo">
         <li>
-          <input type="radio" id="manha" name="periodo" /><label for="manha">Manhã</label>
+          <input type="radio" id="manha" name="periodo" value="Manhã"/><label for="manha">Manhã</label>
         </li>
         <li>
-          <input type="radio" id="tarde" name="periodo" /><label for="tarde">Tarde</label>
+          <input type="radio" id="tarde" name="periodo" value="Tarde"/><label for="tarde">Tarde</label>
         </li>
         <li>
-          <input type="radio" id="noite" name="periodo" /><label for="noite">Noite</label>
+          <input type="radio" id="noite" name="periodo" value="Noite"/><label for="noite">Noite</label>
         </li>
       </ul>
 
       <div class="single-input">
-        <input type="text" name="" id="obs" placeholder="                           ex: Vidro quebrado" required />
+        <input type="text" name="" id="obs" placeholder="                            ex: Vidro quebrado" required class="obs"/>
         <label for="obs">Observação</label>
       </div>
 
       <div class="single-input" id="peso">
-        <input type="number" name="" id="qntd" placeholder="" required />
+        <input type="number" name="" id="qntd" placeholder="" required class="weight"/>
         <label for="qntd">Peso aproximado (kg)</label>
       </div>
 
