--- a/customer/newCollect.html
+++ b/customer/newCollect.html
@@ -126,7 +126,7 @@
         <label for="qntd">Peso aproximado (kg)</label>
       </div>
 
-      <button onclick="chooseAddress()">continuar</button>
+      <button onclick="newCollect()">continuar</button>
     </div>
   </main>
 
