--- a/home.html
+++ b/home.html
@@ -172,8 +172,8 @@
 
           <div class="bot">
 
-            <label for="">Data de Nascimento</label>
-            <input type="date" name="" id="" class="birthDay">
+            <label for="birthDayS">Data de Nascimento</label>
+            <input type="date" name="" id="birthDayS" class="birthDayScavenger">
 
             <label for="">Gênero</label>
             <ul class="gender">
