bo com newCollect.js

--- a/scavenger.html
+++ b/scavenger.html
@@ -29,10 +29,10 @@
       <nav>
         <ul>
           <li><p>Dados</p></li>
-          <li><a href="scavengers/data.html">Meus Dados</a></li>
+          <li><a href="scavenger/data.html">Meus Dados</a></li>
           <li><p>Coletas</p></li>
-          <li><a href="scavengers/scheduled.html">Agendadas</a></li>
-          <li><a href="scavengers/historic.html">Histórico</a></li>
+          <li><a href="scavenger/scheduled.html">Agendadas</a></li>
+          <li><a href="scavenger/historic.html">Histórico</a></li>
         </ul>
       </nav>
 
