--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
       <li><input type="checkbox" id="signin">
         <div class="checkbox-wrapper">
           <a href="customer/login.html" class="signinCliente">Cliente</a>
-          <a href="scavengers/login.html" class="signinColetor">Coletor</a>
+          <a href="scavenger/login.html" class="signinColetor">Coletor</a>
         </div><label for="signin"><a class="signin">Entrar</a></label>
       </li>
     </ul>
