pegando todos os endereços e coletas solicitadas

--- a/customer/newAddress.html
+++ b/customer/newAddress.html
@@ -80,7 +80,7 @@
 
         </div>
         
-        <button>cadastrar</button>
+        <button onclick="newAddress()">cadastrar</button>
       </form>
 
     </main>
