--- a/customer/requested.html
+++ b/customer/requested.html
@@ -48,8 +48,8 @@
       <h1>Coletas Solicitadas</h1>
     </section>
 
-    <main>
-      <div class="collect">
+    <main id="main">
+      <!-- <div class="collect">
         <div class="image">
           <img src="../assets/icons/requested.png" alt="" />
         </div>
@@ -74,10 +74,10 @@
             <img src="../assets/icons/cancel.png" alt="" />
           </button>
         </div>
-      </div>
+      </div> -->
 
     </main>
 
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="../js/customer/requested.js"></script>
   </body>
 </html>
