--- a/customer/address.html
+++ b/customer/address.html
@@ -52,9 +52,9 @@
         <a href="newAddress.html">&#43; Adicionar Endereço</a>
       </div>
 
-      <div class="box">
+      <div class="box" id="box">
 
-        <div class="address">
+        <!-- <div class="address">
           <h3>Casa</h3>
           <ul>
             <li><strong>Rua: </strong>Professor Doutor Euryclides</li>
@@ -64,10 +64,12 @@
             <li><strong>CEP: </strong>13087-571</li>
             <li><strong>Cidade: </strong>Campinas <strong class="st">Estado: </strong>SP</li>
           </ul>
-        </div>
-
+        </div> -->
+        
       </div>
       
     </main>
+
+    <script type="text/javascript" src="../js/customer/address.js"></script>
   </body>
 </html>
