mostrar coletas cliente

--- a/customer/scheduled.html
+++ b/customer/scheduled.html
@@ -49,7 +49,7 @@
     </section>
 
     <main>
-      <div class="collect">
+      <!-- <div class="collect">
         <div class="image">
           <img src="../assets/icons/scheduled.png" alt="" />
         </div>
@@ -80,10 +80,10 @@
             <img src="../assets/icons/done.png" alt="" />
           </button>
         </div>
-      </div>
+      </div> -->
 
     </main>
 
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="../js/customer/scheduled.js"></script>
   </body>
 </html>
