--- a/customer/historic.html
+++ b/customer/historic.html
@@ -49,7 +49,7 @@
     </section>
 
     <main>
-      <div class="collect">
+      <!-- <div class="collect">
         <div class="image">
           <img src="../assets/icons/historic.png" alt="" />
         </div>
@@ -70,9 +70,9 @@
         </div>
 
         <div class="buttons"></div>
-      </div>
+      </div> -->
     </main>
 
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="../js/customer/historic.js"></script>
   </body>
 </html>
