mostrando as respectivas coletas de coletor

--- a/customer/newCollect.html
+++ b/customer/newCollect.html
@@ -159,7 +159,7 @@
 
       <div class="box2" id="box2">
 
-        <!-- ENDEREÇOS -->
+        <input type="radio" name="address" value="joao">
 
       </div>
 
