--- a/scavenger.html
+++ b/scavenger.html
@@ -24,7 +24,7 @@
       <img src="assets/images/user.png" alt="" />
 
       <h3>Bem-vindo</h3>
-      <h2>Coletor</h2>
+      <h2>Coletor(a)</h2>
 
       <nav>
         <ul>
@@ -44,36 +44,37 @@
       <h1>Coletas Solicitadas</h1>
     </section>
 
-    <main>
-      <div class="collect">
+    <main id="main">
+      
+      <!-- <div class="collect">
         <div class="image">
-          <img src="assets/icons/requested.png" alt="" />
+          <img src="assets/icons/requested.png"/>
         </div>
 
         <div class="content">
           <h1>Coleta #1</h1>
           <ul>
             <li>Materiais: <span>plástico, vidro</span></li>
-            <li>
-              Dias: <span>segunda-feira, quarta-feira, quinta-feira</span>
-            </li>
+            <li>Dias: <span>segunda-feira, quarta-feira, quinta-feira</span></li>
             <li>Período: <span>tarde</span></li>
             <li>Observação: <span>vidro quebrado</span></li>
             <li>Peso: <span>5</span><span>kg</span></li>
-            <li>Endereço: <span>Casa</span></li>
+            <li>Cidade: <span>Itaporanga - SP</span></li>
+            <li>Bairro: <span>Centro</span></li>
+            <li>Endereço: <span>Bom Jesus, 1167 - Apto 202</span></li>
           </ul>
         </div>
 
         <div class="buttons">
           <button class="deal">
             <span>aceitar</span>
-            <img src="../assets/icons/deal.png" alt="" />
+            <img src="../assets/icons/deal.png"/>
           </button>
         </div>
-      </div>
+      </div> -->
 
     </main>
 
-    <script type="text/javascript" src="js/chat.js"></script>
+    <script type="text/javascript" src="js/scavenger/requested.js"></script>
   </body>
 </html>
