--- a/scavenger/data.html
+++ b/scavenger/data.html
@@ -25,7 +25,7 @@
       <img src="../assets/images/user.png" alt="" />
 
       <h3>Bem-vindo</h3>
-      <h2>Catador</h2>
+      <h2>Coletor(a)</h2>
 
       <nav>
         <ul>
@@ -93,6 +93,6 @@
       
     </main>
 
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="../js/scavenger/data.js"></script>
   </body>
 </html>
