--- a/scavenger/historic.html
+++ b/scavenger/historic.html
@@ -25,7 +25,7 @@
       <img src="../assets/images/user.png" alt="" />
 
       <h3>Bem-vindo</h3>
-      <h2>Catador</h2>
+      <h2>Coletor(a)</h2>
 
       <nav>
         <ul>
@@ -45,8 +45,9 @@
       <h1>Histórico de Coletas</h1>
     </section>
 
-    <main>
-      <div class="collect">
+    <main id="main">
+
+      <!-- <div class="collect">
         <div class="image">
           <img src="../assets/icons/historic.png" alt="" />
         </div>
@@ -55,20 +56,21 @@
           <h1>Coleta #1</h1>
           <ul>
             <li>Materiais: <span>plástico, vidro</span></li>
-            <li>
-              Dias: <span>segunda-feira, quarta-feira, quinta-feira</span>
-            </li>
+            <li>Dias: <span>segunda-feira, quarta-feira, quinta-feira</span></li>
             <li>Período: <span>tarde</span></li>
             <li>Observação: <span>vidro quebrado</span></li>
             <li>Peso: <span>5</span><span>kg</span></li>
-            <li>Endereço: <span>Casa</span></li>
+            <li>Cidade: <span>Itaporanga - SP</span></li>
+            <li>Bairro: <span>Centro</span></li>
+            <li>Endereço: <span>Bom Jesus, 1167 - Apto 202</span></li>
           </ul>
         </div>
 
         <div class="buttons"></div>
-      </div>
+      </div> -->
+
     </main>
 
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="../js/scavenger/historic.js"></script>
   </body>
 </html>
